--- a/includes/style.css
+++ b/includes/style.css
@@ -2,13 +2,12 @@
 body {
   padding-top: 100px;
 }
-.dummy-chart {
+#chart {
   width: 100%;
-  height: 300px;
+  height: 600px;
   background: #ccc;
   vertical-align: middle;
   text-align: center;
-
   margin-bottom: 50px;
 }
 
